client/my-sites/customer-home/cards/features/support/style.scss
.customer-home__layout .support {

	.support__content {
		display: flex;
		justify-content: space-between;
	}



	.search-card {
		margin: 0;
		border-radius: 3px;

		.search {
			height: auto;

			&.is-open.has-focus {
				// box-shadow: 0 0 0 1px var( --color-primary ), 0 0 0 6px var( --color-primary-light );

				// @include breakpoint-deprecated( '>660px' ) {
				// 	box-shadow: 0 0 0 1px var( --color-primary ), 0 0 0 4px var( --color-primary-light );
				// }
			}

			.search__input {
				font-size: 18px;
				padding: 12px 0;
				color: var( --color-text );


				@include breakpoint-deprecated( '>660px' ) {
					font-size: 15px;
					padding: 16px 0;
				}
			}

			// .search__icon-navigation:focus {
			// 	border-radius: 3px;
			// 	box-shadow: 0 0 0 3px var( --color-primary-light );
			// }
		}
	}


	.support__results-list {
		list-style: none;
		text-align: left;
		margin: 20px 0 0;
		padding: 9px 0 8px;
		border-top: 1px solid var( --color-neutral );

		.help-contact-form & {
			padding: 0;
		}
	}

	.support__results-item {
		margin: 0;
		// font-size: 14px;

		@include breakpoint-deprecated( '>660px' ) {
			// font-size: 18px;
			// line-height: 1.3;
		}

		a {
			//color: var( --color-primary );
			text-decoration: underline;
			font-weight: normal;
			line-height: 1.4;
			display: block;
			padding: 8px 16px;

			&:hover {
				cursor: pointer;
				//color: var( --color-primary );
				background: var( --color-neutral-0 );
			}
		}

		&.is-selected {
			background: var( --color-primary );
			cursor: pointer;
			color: var( --color-text-inverted );

			a {
				color: var( --color-text-inverted );
				&:hover {
					background: none;
				}
			}
		}

		.help-contact-form & {
			a {
				padding-left: 0;

				&:hover {
					background: none;
				}
			}
		}
	}

	.support__empty-results {
		padding: 16px 0 0;
		margin: 0;
		font-size: 14px;
		color: var( --color-text-subtle );
		font-style: italic;

		@include breakpoint-deprecated( '>660px' ) {
			font-size: 16px;
		}
	}

}

